--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
     "@supabase/ssr": "^0.5.0",
-    "next": "15.2.1",
+    "@supabase/supabase-js": "^2.45.0",
+    "next": "^15.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
